<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <View
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="#ff9933"
        android:elevation="4dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/artistView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#ff9933"
            android:elevation="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/artist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/artists"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/albumView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#ff9933"
            android:elevation="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/album" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/albums"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/songView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#ff9933"
            android:elevation="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/song" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/songs"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/explain_library"
                android:textColor="#000000"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nowPlayingView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff9933"
            android:elevation="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/now" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/now_playing"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
