<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.android.musicalstructure.Albums">

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/home"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:text="@string/explain_albums"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorAccent"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/no_cover" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/album_placeholder"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/nowPlayingView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff9933"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/now" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/now_playing"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
